레이아웃 수정완료

--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/item_lecture.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/item_lecture.xml
@@ -14,7 +14,7 @@
         android:id="@+id/testItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
+        android:background="#97aad4"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:layout_weight="0.5"
-            android:background="@android:color/black"
+            android:background="#97aad4"
             android:orientation="vertical">
 
             <TextView
@@ -75,7 +75,7 @@
             android:layout_marginRight="3dp"
             android:layout_marginTop="3dp"
             android:layout_weight="1"
-            android:background="@android:color/black"
+            android:background="#97aad4"
             android:orientation="vertical">
 
             <TextView
