--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,32 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_data"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.8"
-            android:gravity="center"
-            android:text="personal data"
-            android:textColor="@android:color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal"
+            android:weightSum="1">
 
+            <TextView
+                android:id="@+id/tv_data"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="personal data"
+                android:layout_weight="1"
+                android:textColor="#97aad4"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/btn_logout"
+                android:layout_width="73dp"
+                android:layout_height="85dp"
+                android:scaleType="fitCenter"
+                android:layout_weight="8"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/logou" />
+        </LinearLayout>
         <TextView
             android:id="@+id/tv_date"
             android:layout_width="match_parent"
@@ -32,7 +47,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="date"
-            android:textColor="@android:color/holo_blue_dark"
+            android:textColor="#97aad4"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -46,7 +61,7 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:background="@android:color/holo_blue_dark"
+            android:background="#97aad4"
             android:gravity="center"
             android:text="@string/main_main"
             android:textColor="@android:color/white"
@@ -73,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@android:color/holo_blue_dark"
+            android:background="#97aad4"
             app:itemIconTint="@android:color/white"
             app:itemTextColor="@android:color/white"
             app:menu="@menu/navigation" />
