--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_search.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_search.xml
@@ -29,7 +29,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="date"
-            android:textColor="@android:color/holo_blue_dark"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -43,7 +43,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@color/colorPrimaryDark"
             android:gravity="center"
             android:text="@string/search_search"
             android:textColor="@android:color/white"
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_margin="5dp"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@color/colorPrimaryDark"
             android:orientation="horizontal">
 
             <TextView
