아맞다_출품용

--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_notification.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_notification.xml
@@ -5,38 +5,59 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:weightSum="3">
 
-        <TextView
-            android:id="@+id/tv_data_noti"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="300dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.8"
-            android:gravity="center"
-            android:text="personal data"
-            android:textColor="#97aad4"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:layout_marginLeft="30dp"
+            android:weightSum="1.8">
+            <TextView
+                android:id="@+id/tv_data_noti"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.8"
+                android:gravity="center"
+                android:text="personal data"
+                android:textColor="#97aad4"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_date_noti"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="date"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_date_noti"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="date"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/btn_logout"
+            android:layout_width="47dp"
+            android:layout_height="37dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.41"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logout" />
+    </FrameLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:background="#ebebeb">
 
         <TextView
             android:id="@+id/textView"
@@ -53,15 +74,17 @@
             android:id="@+id/rv_notify"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/sejong"
             android:layout_marginTop="5dp"
             android:layout_weight="1" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="3"
         android:gravity="bottom"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#ebebeb"
+        android:layout_weight="3">
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
