--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
@@ -40,21 +39,20 @@
                 android:layout_marginTop="50dp"
                 android:background="@color/colorPrimary"
                 />
-
             <EditText
-                android:id="@+id/edt_pw"
+                android:inputType="textPassword"
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary"
-                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                 android:hint="password"
-                android:inputType="textPassword"
+                android:layout_gravity="center"
                 android:padding="10dp"
                 android:textColor="#ffffff"
                 android:textColorHint="#ffffff"
-                android:textStyle="bold" />
+                android:id="@+id/edt_pw"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimary"
+                />
 
             <Button
                 android:id="@+id/btn_login"
