--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -6,56 +6,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:weightSum="3">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1">
-
+            android:orientation="vertical"
+            android:layout_marginLeft="30dp"
+            android:weightSum="1.8">
             <TextView
                 android:id="@+id/tv_data"
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
+                android:layout_weight="0.8"
                 android:gravity="center"
                 android:text="personal data"
-                android:layout_weight="1"
                 android:textColor="#97aad4"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/btn_logout"
-                android:layout_width="73dp"
-                android:layout_height="85dp"
-                android:scaleType="fitCenter"
-                android:layout_weight="8"
-                android:layout_marginRight="5dp"
-                android:src="@drawable/logou" />
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="date"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
         </LinearLayout>
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="date"
-            android:textColor="#97aad4"
-            android:textSize="20sp" />
-    </LinearLayout>
+
+        <ImageView
+            android:id="@+id/btn_logout"
+            android:layout_width="47dp"
+            android:layout_height="37dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.41"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logout" />
+    </FrameLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#ebebeb">
 
         <TextView
             android:id="@+id/textView3"
@@ -73,6 +79,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
+            android:background="@drawable/sejong"
+
             android:layout_weight="1" />
     </LinearLayout>
 
@@ -81,7 +89,8 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:gravity="bottom"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#ebebeb">
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
